examples/test/testpolicy19552.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19552
  namespace: namespace213
spec:
  podSelector:
    matchLabels:
      key19: value42
      key8: value23
      key21: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value23
          key4: value34
          key44: value14
